[project]
name = "pubmedsdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmedsdk"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.8.4",
]
